--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name":"panique/mini2",
-    "homepage":"https://github.com/panique/mini2",
-    "license":"MIT",
+    "name":"jrods/jrods_mvc",
+    "homepage":"https://github.com/jrods/jrods_mvc",
+    "license":"",
     "require":{
         "php":">=5.3.0",
         "slim/slim": "~2.5",
@@ -13,7 +13,7 @@
     },
     "autoload":{
         "psr-4":{
-            "Mini\\": "Mini"
+            "jrods\\": "jrods"
         }
     }
 }
